--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@
 
 
   .maincontainer {
-        height: 3877px;
         max-width:1280px;
         margin: auto;
     }
@@ -450,7 +449,6 @@ margin: 0;
 }
 .second-main-container {
     width: auto;
-    height: 2880px;
     border: 1px solid green;
 }
 .about img {
@@ -1003,6 +1001,7 @@ border: 1px solid green;
     width: 1057px;
     height: 347px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     /* border: 1px solid red; */
 }
@@ -1184,7 +1183,294 @@ background: linear-gradient(135deg, #803DDA 0%, #165FB1 100%);
 }
 #sixth-container {
     width: auto;
- 
     display: flex;
+    margin-bottom: 41px;
+    justify-content: center;
     border-width: 1px solid green;
+}
+#sixth-container-box {
+    width: 1026px;
+height: 494px;
+display: flex;
+justify-content: space-between;
+margin-top: 62px;
+}
+#box-container-one{
+    max-width: 310px;
+}
+#box-container-one h3 {
+    width: 222px;
+height: 44px;
+margin-top: 0;
+margin-bottom: 20px;
+font-family: "Montserrat";
+font-size: 36px;
+font-weight: 800;
+line-height: 43.88px;
+letter-spacing: 0.01em;
+text-align: left;
+color: #FFFFFF;
+}
+#box-container-one span {
+color: #67AEFF;
+}
+#box-container-one h4 {
+    width: 310px;
+height: 57px;
+margin: 0;
+font-family: "Gilroy";
+font-size: 16px;
+font-weight: 700;
+line-height: 19.34px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #D3D3D3;
+}
+#box-fifth-last{
+    width: 673px;
+height: 494px;
+background: #01052d;
+border-radius: 15px 15px 74px 15px;
+border: 2px solid #67AEFF
+}
+#box-fifth-last h3 {
+    width: 243px;
+    height: 29px;
+    margin: 0;
+    margin-bottom: 34px;
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 29.26px;
+    letter-spacing: 0.01em;
+    text-align: left;
+color: #FFFFFF;        
+}
+input {
+    width: 510px;
+height: 44px;
+border-radius: 10px;
+font-family: "Gilroy";
+font-size: 16px;
+font-weight: 700;
+line-height: 19.34px;
+text-align: left;
+padding-left: 24px;
+color: #D3D3D3;
+background: #010740;
+border: 2px solid  #010740;
+}
+input:hover {
+    border: 2px solid #67AEFF;
+}
+.for-two-childs {
+    width: 540px;
+    height: 50px;
+    display: flex;
+    margin-bottom: 23px;
+    justify-content: space-between;
+}
+.for-two-childs input {
+    width: 230px;
+    height: 50px;
+}
+.check-box {
+    width: 323px;
+    height: 16px;
+    justify-content: space-between;
+    display: flex;
+}
+.for-check-number h6 {
+    width: 296px;
+height: 16px;
+margin: 0;
+font-family: "Gilroy";
+font-size: 12px;
+font-weight: 700;
+line-height: 14.51px;
+text-align: left;
+color: #D3D3D3;
+}
+.seven-button {
+    width: 185px;
+height: 60px;
+border-radius: 15px;
+margin-top: 16px;
+display: flex;
+background: linear-gradient(95.94deg, #9D67E5 0.32%, #67AEFF 98.86%);
+}
+.for-names{
+    max-width: 541px;
+    padding-top: 30px;
+    padding-right: 98px;
+    padding-left: 34px;
+    padding-bottom: 25px;
+}
+.seven-button h4 {
+    width: 119px;
+height: 21px;
+margin: auto;
+font-family: "Montserrat";
+font-size: 16px;
+font-weight: 800;
+line-height: 19.5px;
+text-align: center;
+color: #FFFFFF;
+}
+.for-check-number hr {
+width: 70px;
+height: 0px;
+margin-right: 0;
+margin-top: 0.5px;
+margin-left: 212px;
+border-radius: 2px;
+border: 1px solid #67AEFF;
+}
+footer {
+    width: auto;
+height: 242px;
+display: flex;
+flex-wrap: wrap;
+align-items: flex-end;
+justify-content: center;
+background-color: #01052D;
+}
+.foter-first {
+    width: 1057px;
+    height: 204px;
+border-radius: 5px;
+/* border: 1px solid red; */
+}
+#first-first {
+    display: flex;
+    justify-content: space-between;
+}
+.about {
+    width: 502px;
+height: 24px;
+display: flex;
+justify-content: space-between;
+/* border: 1px solid green; */
+}
+.about h1 {
+    width: 86px;
+    height: 24px;
+    font-family: "Gilroy";
+    margin: 0;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.18px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #D3D3D3;        
+}
+.about h2 {
+    width: 121px;
+    height: 24px;
+    font-family: "Gilroy";
+    margin: 0;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.18px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #D3D3D3;        
+}
+.second-info {
+    display: flex;
+    gap: 48px;
+    justify-content: end;
+    margin-bottom: 28px;
+}
+.second-info h1 {
+    width: 155px;
+height: 24px;
+margin: 0;
+font-family: "Gilroy";
+font-size: 20px;
+font-weight: 700;
+line-height: 24.18px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #D3D3D3;
+}
+.second-info h2 {
+    width: 180px;
+height: 24px;
+margin: 0;
+font-family: "Gilroy";
+font-size: 20px;
+font-weight: 700;
+line-height: 24.18px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #D3D3D3;
+}
+.end-footer {
+    display: flex;
+    gap: 60px;
+}
+.second-info h3 {
+    width: 318px;
+    height: 24px;
+    margin: 0;
+    font-family: "Gilroy";
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.18px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #D3D3D3;
+}
+.foter-first hr {
+    width: auto;
+    height: 2px;
+    border: 0;
+    border-radius: 5px;
+    background: #67AEFF33;
+
+}
+.last-footer {
+    width: auto;
+    height: 15px;
+    margin: 0;
+    margin-top: 28px;
+    display: flex;
+    justify-content: space-between;
+}
+.last-footer h2 {
+    width: 243px;
+    height: 15px;
+    font-family: "Gilroy";
+font-size: 12px;
+margin: 0;
+font-weight: 700;
+line-height: 14.51px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #656C92;
+}
+.end-footer h1 {
+    width: 80px;
+    height: 15px;
+    margin: 0;
+    font-family: "Gilroy";
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14.51px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #656C92;        
+}
+.end-footer h2 {
+    width: 78px;
+    height: 15px;
+font-family: "Gilroy";
+font-size: 12px;
+font-weight: 700;
+margin: 0;
+line-height: 14.51px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #656C92;    
 }
